Bug 918603 - Remove nonsensical assert. r=nbp DONTBUILD